<resources>
    <!--GENERIC STRINGS-->
    <string name="app_name">Leaf EC</string>
    <string name="app_name_long">Leaf EC - Electrical Calculator</string>
    <string name="app_name_subtitle">Electrical Calculator for Green Energy</string>
    <string name="leaf_logo"> EWB logo for main page</string>
    <string name="EWB_logo"> EWB logo for main page</string>
    <string name="Tonibung_logo"> EWB logo for main page</string>
    <string name="generic_0">0</string>
    <string name="splash_text">Developed with the support of:</string>

    <!--MAIN SCREEN STRINGS-->
    <string name="MainMenuTitle1">Solar PV: MCB and cable sizing</string>
    <string name="MainMenu_option_1a">Charge Controller Input/Output</string>
    <string name="MainMenu_option_1b">Inverter Input/Output</string>
    <string name="MainMenuTitle2">General MCB and cable sizing</string>
    <string name="MainMenu_option_2a">Size cable for a MCB</string>
    <string name="MainMenu_option_2b">Size MCB for a cable</string>
    <string name="MainMenu_option_2c">Size MCB and cable for kW and voltdrop</string>
    <string name="MainMenuTitle3">Resources</string>
    <string name="MainMenu_option_3a">DC and AC MCB sizes</string>
    <string name="MainMenu_option_3b">Cable ratings</string>
    <string name="AWG_size_list"> AWG to mm2 converter</string>
    <string name="Gallery">Gallery</string>

    <!--PV INPUT SCREEN STRINGS-->
    <string name="PVInputScr_text1">From Inverter or Charge Controller nameplate, insert:</string>
    <string name="SystemV_text">System Voltage (24V, 48V, 96V etc..) [V]:</string>
    <string name="SystemV_value">0</string>
    <string name="PVInputScr_text2">From PV panel nameplate insert:</string>
    <string name="PV_Voc_text">Open circuit voltage - Voc [V]:</string>
    <string name="PV_Voc_Value">0</string>
    <string name="Panel_rating_text">PV panel size [Watts]:</string>
    <string name="Panel_rating_value">0</string>
    <string name="Isc_text">Short Circuit Current - Isc [A]:</string>
    <string name="Isc_value">0</string>
    <string name="PVInputScr_text3">From Solar Charge Controller nameplate insert:</string>
    <string name="ImaxSCC_text">Maximum current [A]:</string>
    <string name="ImaxSCC_value">0</string>
    <string name="SCC_Type_text">Type of controller (default: PWM):</string>
    <string name="SCC_max_V">Controller maximum input DC voltage [V]: </string>
    <string name="NumPV_text">Number of PV panels per controller:</string>
    <string name="NumPV_value">0</string>
    <string name="CalculatePB">CALCULATE</string>

    <!--PV RESULTS SCREEN STRINGS-->
    <string name="summary">PV array size (kW) and amount of panels:</string>
    <string name="SCC_Idesign_text">The input design current (1.56*Isc) is:</string>
    <string name="SCC_Idesign_value">0</string>
    <string name="n_series_text">Number of panels in series per string:</string>
    <string name="n_parallel_text">Number of parallel strings:</string>
    <string name="PVResultScr_text1">PV Panels to Solar Charge Controller:</string>
    <string name="SCC_In_MCB_text">Suggested DC-MCB or DC-Isolator size:</string>
    <string name="SCC_In_MCB">SCC_In_MCB</string>"
    <string name="MCB_minV_text">Minimum rated DC Voltage for MCB:</string>
    <string name="MCB_minV">tbcV</string>
    <string name="SCC_In_Cu_text">Min. Copper wire size for MCB:</string>
    <string name="SCC_In_Cu">SCC_In_Cu</string>
    <string name="SCC_In_Al_text">Min. Aluminium wire size for MCB:</string>
    <string name="SCC_In_Al">SCC_In_Al</string>
    <string name="PVResultScr_text2">Solar Charge Controller to Batteries:</string>
    <string name="SCC_Out_MCB_text">Suggested DC-MCB size:</string>
    <string name="SCC_Out_MCB">SCC_Out_MCB</string>
    <string name="SCC_Out_Cu_text">Min. Copper wire size for MCB:</string>
    <string name="SCC_Out_Cu">SCC_Out_Cu</string>
    <string name="SCC_Out_Al_text">Min. Aluminium wire size for MCB:</string>
    <string name="SCC_Out_Al">SCC_Out_Al</string>

    <!--INVERTER INPUT SCREEN STRINGS-->
    <string name="InverterScr_text1">From inverter nameplate insert:</string>
    <string name="Inv_NomV_text">Inverter nominal voltage (24V, 48V, etc.) [V]:</string>
    <string name="Inv_Rating_text">Inverter Power Rating in Watts [W]:</string>
    <string name="Input_InverterV">0</string>
    <string name="Input_InvRating">0</string>
    <string name="Inverter_type">Type of AC output:</string>
    <string name="Inverter_efficiency">Inverter efficiency:</string>
    <string name="Inverter_efficiency_value">0.9</string>
    <string name="Inv_design">Design parameters:</string>


    <!--INVERTER RESULTS SCREEN STRINGS-->
    <string name="INV_DC_MCB">A</string>
    <string name="INV_DC_CU">A</string>
    <string name="INV_DC_Al">A</string>
    <string name="INV_DC_V">V</string>
    <string name="INV_AC_MCB">A</string>
    <string name="INV_AC_Cu">A</string>
    <string name="INV_AC_Al">A</string>
    <string name="TypeACMCB">Type of AC MCB is...</string>
    <string name="DC_Num">1</string>
    <string name="CableDisclaimer">Cable types considered:</string>

    <!--LOAD INPUT SCREEN STRINGS-->
    <string name="LoadInputScr_Title">Insert system peak load in Watts [W]:</string>
    <string name="LoadInputScr_LoadType">Specify type of load:</string>
    <string name="LoadInputScr_CableType">Specify type of cable:</string>
    <string name="DC_Voltage_text">Insert DC voltage [V]:</string>
    <string name="DC_Voltage_value">0</string>
    <string name="Nominal_cosphi_text">Nominal Power Factor (cosPhi):</string>
    <string name="Nominal_OL_text">"Nominal overload factor:</string>
    <string name="Nominal_cosphi_value">0.85</string>
    <string name="Nominal_OL_value">1.25</string>
    <string name="VoltDrop_checkbox">Volt drop calculation</string>
    <string name="distance_text">Insert distance (one way) [meters]:</string>
    <string name="distance_value">xxm</string>
    <string name="maxVoltDrop_text">Optional: Specify max. volt drop [%]:</string>
    <string name="maxVoltDrop_value">xx%</string>
    <string name="opt_VD_cablesize">Optional: Specify cable size:</string>

    <!--LOAD RESULT SCREEN STRINGS-->
    <string name="LoadResultScr_LoadDescription">Load description:</string>
    <string name="LoadResultScr_DesignCurrent">Design current:</string>
    <string name="LoadResultScr_Title1">The suggested MCB size is:</string>
    <string name="LoadResultScr_Title2">The minimum suggested cable size for that MCB is:</string>
    <string name="VDropResults">Volt drop results:</string>


    <!--AWG SIZE TABLE-->

    <string name="AWG_title">AWG to sqmm conversion chart</string>
    <string name="AWG">AWG</string>
    <string name="AWG_diam">Diameter</string>
    <string name="AWG_diamunit">(mm)</string>
    <string name="AWG_area">Area</string>
    <string name="AWG_areaunit">(sqmm)</string>
    <string name="IknowAWG"> I know AWG size</string>
    <string name="Iknowmm2"> I know mm2 size</string>
    <string name="IwantAWG"> AWG equivalent</string>
    <string name="Iwantmm2"> I want mm2 equivalent</string>
    <string name = "disclaimer"> (Approximated to closest size up/down)</string>


    <!--MULTIPLE SCREEN STRINGS-->
    <string name="Nominal_V_1ph_text">Nominal single phase voltage [V]:</string>
    <string name="Nominal_V_3ph_text">Nominal three phase voltage [V]:</string>
    <string name="Nominal_V_1ph_value">230</string>
    <string name="Nominal_V_3ph_value">400</string>

    <string name="CableSelection">Select cable type:</string>
    <string name="CableType1">Copper, PVC, single core or twin flat. Clipped direct</string>
    <string name="CableType2">Aluminium, PVC, single core. In free Air. (Transmission line)</string>

    <string name="InsertCableSize">Select cable size:</string>
    <string name="CableSize">0</string>
    <string name="InsertMCBSize">Insert MCB Size in Amps:</string>
    <string name="MCBSize">0</string>
    <string name="InsertLoad">Insert load in watts [W]:</string>
    <string name="Load">0</string>
    <string name="SinglePhase">Single phase load</string>
    <string name="ThreePhase">3-phase load</string>
    <string name="MCB_size_unit">Amps</string>
    <string name="Cable_size_unit">sqmm</string>
    <string name="MCBSelectionforCable_title">Maximum suggested MCB size for cable:</string>
    <string name="CableSelectionforMCB_title">Minimum suggested cable size for TBC MCB:</string>
    <string name="CableRating"> Current Rating of the cable:  TBC</string>
    <string name="title_activity_solar_pv_main">solarPV_main</string>
    <string name="title_activity_pv_main_screen">PV_main_screen</string>


</resources>
